# Beneficial-Quantum-Noise-in-Variational-Quantum-Classifiers

./: .gitignore  .markdownlint-validation.md  .ruff.toml  ACADEMIC_IMPROVEMENTS_SUMMARY.md  ANALISE_QUALIS_A1.md  ANALISE_QUALIS_A1_TRIALS_QISKIT.md  ANALYSIS_SUMMARY.md  ARGUMENTACAO_TECNICA_CNPQ.md  ARTICLE_FRAMEWORK_SUMMARY.md  ARTIGO_RESULTADOS_QUALIS_A1.md  ATUALIZACAO_COMPLETA_v8.0-QAI.md  ATUALIZACAO_README_FINAL.md  AUDITORIA_ARTIGO_ATUAL.md  AVALIACAO_CNPQ.md  BENCHMARK_RESULTS_FINAL.md  CHANGELOG_EXECUCOES.md  CHECKLIST_AUDITORIA_100PTS.md  CHECKLIST_AUDITORIA_COMPLETO.md  CHECKLIST_CNPQ.md  CHECKLIST_IMPLEMENTACAO_FRAMEWORK_V8.md  CNPQ_FINAL_SUMMARY.md  CODE_ANALYSIS_REPORT.md  COMPARISON_V8_V10.md  COMPREHENSIVE_DATASETS_NOISE_ARCHITECTURES.md  CONFIRMACAO_FINAL_IMPLEMENTACAO.md  CONFIRMACAO_IMPLEMENTACAO_COMPLETA.md  CONGRUENCE_REPORT.md  CONSULTOR_METODOLOGICO_README.md  CRONOGRAMA_ESTIMADO.md  CRONOGRAMA_ESTIMADO_COMPLETO.md  DISCUSSAO_CRITICA_QUALIS_A1.md  DOCUMENTATION_INDEX.md  ENTREGA_FINAL_TRACING.md  ERROR_SEARCH_GUIDE.md  ERROR_SEARCH_REPORT.md  ESPECIFICACAO_EXPERIMENTOS_QISKIT.md  EXECUCAO_FRAMEWORK_24-12-2025.md  EXECUCAO_PENNYLANE_INICIADA.md  EXECUCAO_QISKIT_2H.md  EXECUTION_COMPLETE_FINAL_STATUS.md  (+226 more)
vqc_drug_v10a1/: LICENSE  QUICKSTART.md  README.md  pyproject.toml
vqc_drug_v10a1/docker/: Dockerfile  environment.yml
vqc_drug_v10a1/src/: __init__.py  audit.py  cli.py  data.py  models.py  plots.py  tune.py  v10_cli.py  v10_fisher.py  v10_lindblad.py  v10_meta.py  v10_noise_ansatz.py  v10_psqk.py  v10_qasr.py  v10_qda.py  v10_qng.py  v10_zne.py  (+1 more)
(+4544 files in other folders)
